--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FoodApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_nav_home">Home</string>
+    <string name="text_nav_cart">Cart</string>
+    <string name="text_nav_profile">Profile</string>
+    <string name="text_cart_fragment_sample">hello this cart</string>
+    <string name="text_home_fragment_sample">hello this home</string>
+    <string name="text_profile_fragment_sample">hello this profile</string>
 </resources>
