add layout header, search bar, category in home fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,40 @@
     <string name="text_cart_fragment_sample">hello this cart</string>
     <string name="text_home_fragment_sample">hello this home</string>
     <string name="text_profile_fragment_sample">hello this profile</string>
+    <string name="text_name">Hai Komang,</string>
+    <string name="text_greetings">Mau makan apa hari ini?</string>
+    <string name="text_discount">Diskon 50%</string>
+    <string name="text_disc_description">Pesan makananmu lewat aplikasi dan dapatkan diskonnya!</string>
+    <string name="text_rice_category">Nasi</string>
+    <string name="text_noodle_category">Mie</string>
+    <string name="text_snack_category">Snack</string>
+    <string name="text_drink_category">Minuman</string>
+    <string name="text_category_title">Kategori</string>
+    <string name="text_list_menu_title">List Menu Makanan</string>
+    <string name="text_friedrice_menu">Nasi Goreng Spesial</string>
+    <string name="text_friedrice_price">Rp30.000</string>
+    <string name="text_frenchfries_menu">Kentang Goreng</string>
+    <string name="text_frenchfries_price">Rp15.000</string>
+    <string name="text_noodle_menu">Mie Kuah Spesial</string>
+    <string name="text_noodle_price">Rp20.000</string>
+    <string name="text_lime_mojito_menu">Lime Mojito</string>
+    <string name="text_lime_mojito_price">Rp22.000</string>
+    <string name="text_category_name">Category</string>
+    <string name="text_menu_name">Menu Name</string>
+    <string name="text_menu_price">Rp 20.000</string>
+    <string name="text_hint_search_bar">Cari Makanan</string>
+    <string name="text_menu_name_detail">Nasi Goreng</string>
+    <string name="text_menu_price_detail">Rp1.000</string>
+    <string name="text_menu_desc_detail">Hidangan klasik Asia dengan nasi yang dimasak sempurna, dicampur dengan daging ayam atau udang, telur, dan sayuran.</string>
+    <string name="text_location_detail">Lokasi</string>
+    <string name="text_location_address_detail">Restoran Makan Enak, Jalan Raya Nomor 123, Kota Kecamatan, Provinsi, Kode Pos: 12345, Negara: Negara Dummy</string>
+    <string name="text_default_quantity">1</string>
+    <string name="text_default_button">Tambah ke Keranjang - Rp 1.000</string>
+    <string name="text_profile_header">Profile</string>
+    <string name="text_profile_username">Username</string>
+    <string name="text_profile_email">Email</string>
+    <string name="text_profile_phone_number">No. Telepon</string>
+    <string name="text_username_profile">YudaSaputraa</string>
+    <string name="text_email_value">yudasaputra082@gmail.com</string>
+    <string name="text_phone_number_value">0898979897900</string>
 </resources>
