--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,8 @@
     <string name="text_toast_on_quantity">Minimum pemesanan 1</string>
     <string name="text_add_cart_title">Tambah ke Keranjang -</string>
     <string name="placeholder_total_price">Tambah ke Keranjang - %1$s</string>
+    <string name="text_add_cart_on_success">Berhasil</string>
+    <string name="text_add_cart_on_error">Gagal!</string>
+    <string name="text_add_cart_on_loading">Loading...</string>
+    <string name="text_toast_theme_mode">Kebetulan belum jadi :D</string>
 </resources>
