add Authentication and Crashlytics using Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,28 @@
     <string name="text_on_cart_empty">Keranjangmu kosong!</string>
     <string name="text_category_on_empty">Data kategory kosong!</string>
     <string name="text_empty_price">-</string>
+    <string name="text_register">Register</string>
+    <string name="text_hint_username">Username</string>
+    <string name="text_hint_email">Email</string>
+    <string name="text_hint_password">Password</string>
+    <string name="text_hint_confirm_password">Konfirmasi Password</string>
+    <string name="text_hint_phone_number">No. Telepon</string>
+    <string name="text_password">Password</string>
+    <string name="text_confirm_password">konfirmasi Password</string>
+    <string name="text_phone_number">No. Telepon</string>
+    <string name="text_already_have_account">Sudah punya akun?. Login</string>
+    <string name="text_sub_register">Daftarkan dirimu dan nikmati kemudahan dalam memesan makanan.</string>
+    <string name="text_login">Masuk</string>
+    <string name="tv_not_have_account">Belum punya akun?. Daftar</string>
+    <string name="text_full_name">Nama Lengkap</string>
+    <string name="text_hint_full_name">Nama Lengkap</string>
+    <string name="text_fullname_cannot_empty">Nama lengkap tidak boleh kosong!</string>
+    <string name="text_username_cannot_empty">Username tidak boleh kosong!</string>
+    <string name="text_email_cannot_empty">Email tidak boleh kosong!</string>
+    <string name="text_invalid_email_format">Masukkan format email yang benar!</string>
+    <string name="text_password_cannot_empty">Password tidak boleh kosong!</string>
+    <string name="text_password_should_be_8_character"><![CDATA[Password harus > 8 karakter]]></string>
+    <string name="text_password_doesnt_match">Kata sandi tidak cocok!</string>
+    <string name="text_login_failed">Login Gagal! : %1$s</string>
+    <string name="text_register_failed">Register Gagal! : %1$s</string>
 </resources>
