--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FoodApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_nav_home">Beranda</string>
     <string name="text_nav_cart">Keranjang</string>
@@ -89,7 +88,7 @@
     <string name="text_password">Password</string>
     <string name="text_confirm_password">konfirmasi Password</string>
     <string name="text_phone_number">No. Telepon</string>
-    <string name="text_already_have_account">Sudah punya akun?. Login</string>
+    <string name="text_already_have_account">Sudah punya akun? Login</string>
     <string name="text_sub_register">Daftarkan dirimu dan nikmati kemudahan dalam memesan makanan.</string>
     <string name="text_login">Masuk</string>
     <string name="tv_not_have_account">Belum punya akun? Daftar</string>
