add post order using API when checkout items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <string name="text_logout">Logout</string>
     <string name="text_change_password">Ganti Password</string>
     <string name="text_sub_login">Masuk untuk mengakses lebih banyak fitur.</string>
+    <string name="create_order_success">Pemesanan berhasil!</string>
+    <string name="close">Oke</string>
 </resources>
