fix bugs on loading in register button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="error_unknown">Terjadi kesalahan!\n</string>
     <string name="error_wrong_password">Password anda salah!</string>
     <string name="error_wrong_email">Email atau password salah!</string>
+    <string name="text_register_success">Daftar berhasil!</string>
 </resources>
